<?xml version="1.0" encoding="utf-8"?>
<android.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView_seekBarLabel"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="start"
        android:text="@string/textview_seekbarlabel_string"
        android:textAlignment="center"
        android:textColor="@color/tip_color2"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView_tipLabel"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:labelFor="@id/textView_tipAmount"
        android:text="@string/textView_tip_string"
        android:textAlignment="center"
        android:textColor="@color/tip_color"
        android:textSize="35sp"/>

    <EditText
        android:id="@+id/editText_EnterAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:background="@color/edit_background"
        android:ems="10"
        android:hint="@string/EditText_enter_amount"
        android:inputType="number|numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="286dp"
        android:layout_height="35dp"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_gravity="fill_horizontal"
        android:indeterminate="false"
        android:max="30"
        android:progress="0"
        tools:ignore="OnClick"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/textView_totalLabel"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="start"
        android:labelFor="@id/textView_totalAmount"
        android:text="@string/textView_total_string"
        android:textAlignment="center"
        android:textColor="@color/bill_color"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/textView_tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_gravity="center_horizontal"
        android:text="@string/textView_placeHolder_string"
        android:textColor="@color/tip_color"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/textView_totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_gravity="center_horizontal"
        android:text="@string/textView_placeHolder_string"
        android:textColor="@color/bill_color"
        android:textSize="35sp"/>

</android.widget.GridLayout>